--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "server": "node server.js"
   },
   "dependencies": {
     "@emotion/react": "^11.13.3",
@@ -15,6 +16,7 @@
     "@mui/icons-material": "^6.1.1",
     "@mui/material": "^6.1.1",
     "dotenv": "^16.4.5",
+    "express": "^4.21.0",
     "mongodb": "^6.9.0",
     "mongoose": "^8.7.0",
     "react": "^18.3.1",
