--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "mongodb": "^6.9.0",
     "mongoose": "^8.7.0",
     "mysql": "^2.18.1",
+    "mysql2": "^3.11.3",
     "react": "^18.3.1",
     "react-circular-progressbar": "^2.1.0",
     "react-dom": "^18.3.1",
